// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListPaging empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div
  className="publicationsListPaging columns is-gapless is-mobile"
>
  <div
    className="column is-hidden-mobile"
  >
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Page 1 of 3 (60 records)"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page selectedPage"
      disabled={true}
      fullWidth={false}
      label={1}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={2}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={3}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-half-mobile"
  >
    <FlatButton
      className="pagingNext"
      disabled={false}
      fullWidth={false}
      label="Next page"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div
  className="publicationsListPaging columns is-gapless is-mobile"
>
  <div
    className="column is-hidden-mobile"
  >
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Page 3 of 3 (60 records)"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-half-mobile"
  >
    <FlatButton
      className="pagingPrevious"
      disabled={false}
      fullWidth={false}
      label="Previous page"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={1}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={2}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page selectedPage"
      disabled={true}
      fullWidth={false}
      label={3}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div
  className="publicationsListPaging columns is-gapless is-mobile"
>
  <div
    className="column is-hidden-mobile"
  >
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Page 2 of 3 (60 records)"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-half-mobile"
  >
    <FlatButton
      className="pagingPrevious"
      disabled={false}
      fullWidth={false}
      label="Previous page"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={1}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page selectedPage"
      disabled={true}
      fullWidth={false}
      label={2}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-1 is-hidden-mobile"
  >
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={3}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
  <div
    className="column is-half-mobile"
  >
    <FlatButton
      className="pagingNext"
      disabled={false}
      fullWidth={false}
      label="Next page"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
</div>
`;
